Overflow bug in page component

--- a/src/Elements/Page/Page.scss
+++ b/src/Elements/Page/Page.scss
@@ -6,6 +6,7 @@
   flex: 1 1 0;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .Page__TabsHeader {
